--- a/MsPacManEngine/pom.xml
+++ b/MsPacManEngine/pom.xml
@@ -24,6 +24,12 @@
             <organization>University of Essex</organization>
             <organizationUrl>www.essex.ac.uk</organizationUrl>
         </developer>
+        <developer>
+            <name>Juan A. Recio-Garcia</name>
+            <email>jareciog@fdi.ucm.es</email>
+            <organization>Universidad Complutense de Madrid</organization>
+            <organizationUrl>http://gaia.fdi.ucm.es/</organizationUrl>
+        </developer>
     </developers>
 
     <distributionManagement>
@@ -143,8 +149,15 @@
   			<groupId>es.ucm.fdi.gaia</groupId>
   			<artifactId>jCOLIBRI</artifactId>
   			<version>3.2</version>
-  	    </dependency>
+  			<exclusions>
+  				<exclusion>
+  					<groupId>org.slf4j</groupId>
+  					<artifactId>slf4j-log4j12</artifactId>
+  				</exclusion>
+  			</exclusions>
+        </dependency> 
     </dependencies>
     <url>http://gaia.fdi.ucm.es</url>
     <description>MsPacManEngine</description>
+    
 </project>
